# Face-Recognition-PCA

./: .gitignore  CMakeLists.txt  README.md  app.py  att_faces.py  dataset.cpp  dataset.h  main.cpp  metrics.cpp  metrics.h  model.cpp  model.h  requirements.txt
templates/: index.html
web/: index.html  script.js  style.css
